Complete website implementation including: - Homepage with responsive design - Pricing page with plan comparisons - API documentation page with Stripe-style layout - Features page with placeholder sections - Consistent navbar across all pages - Updated logo sizing and styling

--- a/pricing.html
+++ b/pricing.html
@@ -15,8 +15,8 @@
             <span class="logo-text">Complixity</span>
         </a>
         <div class="nav-links">
-            <a href="#features">Features</a>
-            <a href="#api">API</a>
+            <a href="features.html">Features</a>
+            <a href="api.html">API</a>
             <a href="pricing.html" class="active">Pricing</a>
             <a href="#contact" class="cta-button">Get Started</a>
         </div>
@@ -45,6 +45,7 @@
                     <button class="download-btn">Download</button>
                     <button class="others-btn">Others</button>
                 </div>
+                <button class="pricing-cta secondary">Get Started</button>
             </div>
 
             <div class="price-column featured">
@@ -58,7 +59,7 @@
                     <li>✓ Unlimited slow premium requests</li>
                     <li>✓ 10 c1-mini uses per day</li>
                 </ul>
-                <button class="get-started-btn">Get Started</button>
+                <button class="pricing-cta primary">Get Started</button>
             </div>
 
             <div class="price-column">
@@ -71,7 +72,7 @@
                     <li>✓ Admin dashboard with usage stats</li>
                     <li>✓ SAML/OIDC SSO</li>
                 </ul>
-                <button class="get-started-btn">Get Started</button>
+                <button class="pricing-cta secondary">Get Started</button>
             </div>
         </div>
     </main>
