--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <span class="logo-text">Complixity</span>
         </a>
         <div class="nav-links">
-            <a href="#features">Features</a>
-            <a href="#api">API</a>
+            <a href="features.html">Features</a>
+            <a href="api.html">API</a>
             <a href="pricing.html">Pricing</a>
             <a href="#contact" class="cta-button">Get Started</a>
         </div>
